Changed styles for close button. Changed borders for inputs. Fixed alignment of close button. Changed fonts for blue buttons to be consistent.

--- a/style.css
+++ b/style.css
@@ -1976,7 +1976,7 @@ textarea {
 .resume_form .uneditable-input,
 .resume_form .fake_input_box {
     background: #fff;
-    border: 1px solid #00a6e5;
+    border: 1px solid #ccc;
 }
 
 .resume_form input[type="text"],
@@ -1994,11 +1994,11 @@ textarea {
 .file_input_container .displayed_div {
     margin-top: 24px;
     margin-bottom: 10px;
-    margin-right: 15px;
+    margin-right: 8px;
     position: relative;
     width: 98%;
 }
-.file_input_container .displayed_div .displayed_file_submit {}
+.file_input_container .displayed_div .displayed_file_submit { float: left; }
 .file_input_container .displayed_div .fake_input_box { display: block; float: right; }
 .file_input_container .code_sample_input,
 .file_input_container .file_input { position: absolute; left: 0; top:0; width: 100%; height: 100%; }
@@ -2007,8 +2007,9 @@ textarea {
 .files_input_container_container.file_input_container { width: 100%; clear: both; float: none; }
 .files_input_container_container.file_input_container .displayed_div { width: 50%; }
 
-#generic_submit .resume_form { padding: 20px 0 0; margin-bottom: 0; }
+#generic_submit .resume_form { padding: 20px 0 0; margin-bottom: 0; overflow: visible !important; }
 #generic_submit strong { color: inherit; }
+#generic_submit .icon-cancel-circled { font-size: 18px; right: -21px; }
 
 /*-----------------------------------------------------------------------------------*/
 /*	PROGRESS BAR
@@ -2924,6 +2925,7 @@ textarea {
     /*  CAREERS JOBS
     /*-----------------------------------------------------------------------------------*/
     #jobs-block-templates { display: none; }
+
     .jobs-block [class^="icon-"], .jobs-block [class*=" icon-"] { font-size: 18px; }
     .job-section { margin: 10px 0; }
 
