--- a/style/css/careers.css
+++ b/style/css/careers.css
@@ -39,8 +39,6 @@ ul.job_list li.job_list_item { margin-bottom:20px; }
 
 .displayed_cover_letter_div, .displayed_resume_div { position:relative; z-index:1; }
 .remove_cover_letter, .remove_resume { z-index:3; display:none; }
-.displayed_cover_letter_glare, .remove_cover_letter_glare, .displayed_resume_glare, .remove_resume_glare { width:100%; height:50%; position:absolute; top:0px; left:0px; background-color:#ffffff; opacity:0.25; filter:alpha(opacity=25); border-radius:2px; }
-.displayed_cover_letter_text, .remove_cover_letter_text, .displayed_resume_text, .remove_resume_text { width:100%; text-align:center; font-family:"AofLCenturyGothicBold"; color:#ffffff; font-size:11px; position:relative; top:0px; }
 
 .fake_input_box { width:151px; height:25px; padding:5px 5px 0px 5px; background-color:#ffffff; border:1px solid #00a6e5; white-space:nowrap; font-size:12px; overflow:hidden; color:#464646; }
 
